update user_user_recs_part2 function with sort_values

--- a/src/recommendations_with_ibm.ipynb
+++ b/src/recommendations_with_ibm.ipynb
@@ -1454,16 +1454,16 @@
     {
      "data": {
       "text/plain": [
-       "['recent trends in recommender systems',\n",
-       " 'working with db2 warehouse on cloud in data science experience',\n",
-       " 'deep forest: towards an alternative to deep neural networks',\n",
-       " 'shaping data with ibm data refinery',\n",
+       "['modeling energy usage in new york city',\n",
+       " 'leverage python, scikit, and text classification for behavioral profiling',\n",
+       " 'using github for project control in dsx',\n",
+       " 'the power of machine learning in spark',\n",
        " 'i am not a data scientist – ibm watson data lab',\n",
-       " 'visualize data with the matplotlib library',\n",
-       " 'process events from the watson iot platform in a streams python application',\n",
-       " 'this week in data science (february 14, 2017)',\n",
-       " 'insights from new york car accident reports',\n",
-       " '520    using notebooks with pixiedust for fast, flexi...\\nName: title, dtype: object']"
+       " 'brunel interactive visualizations in jupyter notebooks',\n",
+       " 'small steps to tensorflow',\n",
+       " 'this week in data science (april 18, 2017)',\n",
+       " 'aspiring data scientists! start to learn statistics with these 6 books!',\n",
+       " 'ml optimization using cognitive assistant']"
       ]
      },
      "execution_count": 30,
@@ -1562,6 +1562,56 @@
     "    return neighbors_df\n",
     "\n",
     "\n",
+    "# def user_user_recs_part2(user_id, m=10):\n",
+    "#     \"\"\"\n",
+    "#     INPUT:\n",
+    "#     user_id - (int) a user id\n",
+    "#     m - (int) the number of recommendations you want for the user\n",
+    "    \n",
+    "#     OUTPUT:\n",
+    "#     recs - (list) a list of recommendations for the user by article id\n",
+    "#     rec_names - (list) a list of recommendations for the user by article title\n",
+    "    \n",
+    "#     Description:\n",
+    "#     Loops through users based on similarity to the input user_id.\n",
+    "#     For each similar user, finds articles the input user hasn't seen and recommends them.\n",
+    "#     Continues until m recommendations are found or all similar users are exhausted.\n",
+    "    \n",
+    "#     Notes:\n",
+    "#     * Prioritizes users with the most total article interactions before others.\n",
+    "#     * Also prioritizes articles with the most total interactions before others.\n",
+    "#     \"\"\"\n",
+    "\n",
+    "#     user_article_ids, _ = get_user_articles(user_id)\n",
+    "\n",
+    "#     # Get similar users (neighbors) sorted by similarity\n",
+    "#     neighbors = get_top_sorted_users(user_id).neighbor_id.values\n",
+    "    \n",
+    "#     # Initialize an empty set for recommendations to avoid duplicates\n",
+    "#     recs_set = set()\n",
+    "    \n",
+    "#     # Iterate over similar users and gather recommendations\n",
+    "#     for neighbor_id in neighbors:\n",
+    "#         neighbor_article_ids, _ = get_user_articles(neighbor_id)\n",
+    "        \n",
+    "#         # Find articles the neighbor has seen that the user hasn't\n",
+    "#         new_recs = set(neighbor_article_ids) - set(user_article_ids)\n",
+    "\n",
+    "#         # Add new recommendations to the set\n",
+    "#         recs_set.update(new_recs)\n",
+    "\n",
+    "#         # Stop when we have enough recommendations\n",
+    "#         if len(recs_set) >= m:\n",
+    "#             break\n",
+    "    \n",
+    "#     # Convert recommendations to a list and limit to top m\n",
+    "#     recs = list(recs_set)[:m]\n",
+    "    \n",
+    "#     # Get article names corresponding to the recommended article IDs\n",
+    "#     rec_names = get_article_names(recs)\n",
+    "\n",
+    "#     return recs, rec_names\n",
+    "\n",
     "def user_user_recs_part2(user_id, m=10):\n",
     "    \"\"\"\n",
     "    INPUT:\n",
@@ -1582,10 +1632,19 @@
     "    * Also prioritizes articles with the most total interactions before others.\n",
     "    \"\"\"\n",
     "\n",
-    "    user_article_ids, _ = get_user_articles(user_id)\n",
+    "    # Get the list of articles the input user has already seen\n",
+    "    try:\n",
+    "        user_article_ids, _ = get_user_articles(user_id)\n",
+    "    except KeyError:  # If the user does not exist, recommend top m articles by popularity\n",
+    "        recs = get_top_article_ids(m)\n",
+    "        return recs, get_article_names(recs)\n",
     "\n",
     "    # Get similar users (neighbors) sorted by similarity\n",
-    "    neighbors = get_top_sorted_users(user_id).neighbor_id.values\n",
+    "    neighbors_df = get_top_sorted_users(user_id, df, user_item)\n",
+    "    neighbors = neighbors_df['neighbor_id'].values\n",
+    "\n",
+    "    # Get the popularity of all articles by counting their total interactions\n",
+    "    article_interactions = df.groupby('article_id').count()['user_id']\n",
     "    \n",
     "    # Initialize an empty set for recommendations to avoid duplicates\n",
     "    recs_set = set()\n",
@@ -1596,9 +1655,13 @@
     "        \n",
     "        # Find articles the neighbor has seen that the user hasn't\n",
     "        new_recs = set(neighbor_article_ids) - set(user_article_ids)\n",
-    "        \n",
+    "        items_float = list(map(float, new_recs))\n",
+    "\n",
+    "        # Sorting recommendations based on article popularity/interaction count\n",
+    "        recs_to_add = article_interactions.loc[items_float].sort_values(ascending=False).index.tolist()\n",
+    "          \n",
     "        # Add new recommendations to the set\n",
-    "        recs_set.update(new_recs)\n",
+    "        recs_set.update(recs_to_add)\n",
     "\n",
     "        # Stop when we have enough recommendations\n",
     "        if len(recs_set) >= m:\n",
@@ -1610,7 +1673,7 @@
     "    # Get article names corresponding to the recommended article IDs\n",
     "    rec_names = get_article_names(recs)\n",
     "\n",
-    "    return recs, rec_names\n"
+    "    return recs, rec_names"
    ]
   },
   {
@@ -1735,6 +1798,135 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neighbor_id</th>\n",
+       "      <th>similarity</th>\n",
+       "      <th>num_interactions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3868</th>\n",
+       "      <td>3870</td>\n",
+       "      <td>74</td>\n",
+       "      <td>144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3780</th>\n",
+       "      <td>3782</td>\n",
+       "      <td>39</td>\n",
+       "      <td>363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>38</td>\n",
+       "      <td>364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>203</td>\n",
+       "      <td>33</td>\n",
+       "      <td>160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4457</th>\n",
+       "      <td>4459</td>\n",
+       "      <td>33</td>\n",
+       "      <td>158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5129</th>\n",
+       "      <td>5131</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5139</th>\n",
+       "      <td>5141</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5142</th>\n",
+       "      <td>5144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5145</th>\n",
+       "      <td>5147</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5147</th>\n",
+       "      <td>5149</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5148 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      neighbor_id  similarity  num_interactions\n",
+       "3868         3870          74               144\n",
+       "3780         3782          39               363\n",
+       "22             23          38               364\n",
+       "201           203          33               160\n",
+       "4457         4459          33               158\n",
+       "...           ...         ...               ...\n",
+       "5129         5131           0                 1\n",
+       "5139         5141           0                 1\n",
+       "5142         5144           0                 1\n",
+       "5145         5147           0                 1\n",
+       "5147         5149           0                 1\n",
+       "\n",
+       "[5148 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_top_sorted_users(131)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -1744,10 +1936,10 @@
      "output_type": "stream",
      "text": [
       "The top 10 recommendations for user 20 are the following article ids:\n",
-      "['336.0', '1150.0', '1427.0', '1356.0', '1335.0', '1278.0', '761.0', '1157.0', '1407.0', '1360.0']\n",
+      "[1024.0, 1409.0, 1410.0, 1411.0, 1152.0, 1157.0, 1154.0, 1153.0, 1160.0, 1162.0]\n",
       "\n",
       "The top 10 recommendations for user 20 are the following article names:\n",
-      "['challenges in deep learning', 'airbnb data for analytics: venice calendar', 'use xgboost, scikit-learn & ibm watson machine learning apis', 'occupation (2015): united states demographic measures', 'labor', 'develop a scala spark model on chicago building violations', 'variational auto-encoder for \"frey faces\" using keras', 'airbnb data for analytics: washington d.c. listings', 'uci: poker hand - testing data set', 'pixieapp for outlier detection']\n"
+      "['using deep learning to reconstruct high-resolution audio', 'uci: red wine quality', 'uci: sms spam collection', 'uci: white wine quality', 'airbnb data for analytics: venice reviews', 'airbnb data for analytics: washington d.c. listings', 'airbnb data for analytics: vienna listings', 'airbnb data for analytics: vienna calendar', 'analyze accident reports on amazon emr spark', 'analyze energy consumption in buildings']\n"
      ]
     }
    ],
@@ -1770,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1782,7 +1974,7 @@
        "Name: 3931, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1793,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +1997,7 @@
        "Name: 240, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1816,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -1830,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -1878,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -1896,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -1930,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -1972,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1998,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -2010,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -2237,7 +2429,7 @@
        "[5 rows x 714 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2256,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -2290,7 +2482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -2348,7 +2540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -2395,7 +2587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2414,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2431,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2448,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2465,7 +2657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -2507,7 +2699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -2525,7 +2717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2544,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2603,7 +2795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2645,7 +2837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2674,7 +2866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2726,7 +2918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -2736,7 +2928,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook ../src/Recommendations_with_IBM.ipynb to html\n",
-      "[NbConvertApp] Writing 412259 bytes to ../src/Recommendations_with_IBM.html\n"
+      "[NbConvertApp] Writing 420688 bytes to ../src/Recommendations_with_IBM.html\n"
      ]
     },
     {
@@ -2745,7 +2937,7 @@
        "0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
