fix error in user_user_recs_part2 function

--- a/src/recommendations_with_ibm.ipynb
+++ b/src/recommendations_with_ibm.ipynb
@@ -1454,16 +1454,16 @@
     {
      "data": {
       "text/plain": [
-       "['modeling energy usage in new york city',\n",
-       " 'leverage python, scikit, and text classification for behavioral profiling',\n",
-       " 'using github for project control in dsx',\n",
-       " 'the power of machine learning in spark',\n",
-       " 'i am not a data scientist – ibm watson data lab',\n",
-       " 'brunel interactive visualizations in jupyter notebooks',\n",
-       " 'small steps to tensorflow',\n",
-       " 'this week in data science (april 18, 2017)',\n",
-       " 'aspiring data scientists! start to learn statistics with these 6 books!',\n",
-       " 'ml optimization using cognitive assistant']"
+       "['brunel 2.0 preview',\n",
+       " 'deep learning with data science experience',\n",
+       " 'twelve\\xa0ways to color a map of africa using brunel',\n",
+       " '1448    i ranked every intro to data science course on...\\nName: title, dtype: object',\n",
+       " 'get started with streams designer by following this roadmap',\n",
+       " '5 practical use cases of social network analytics: going beyond facebook and twitter',\n",
+       " 'why even a moth’s brain is smarter than an ai',\n",
+       " 'times world university ranking analysis',\n",
+       " 'flightpredict ii: the sequel  – ibm watson data lab',\n",
+       " '54174    detect potentially malfunctioning sensors in r...\\nName: title, dtype: object']"
       ]
      },
      "execution_count": 30,
@@ -1647,7 +1647,7 @@
     "    article_interactions = df.groupby('article_id').count()['user_id']\n",
     "    \n",
     "    # Initialize an empty set for recommendations to avoid duplicates\n",
-    "    recs_set = set()\n",
+    "    recs_set = []\n",
     "    \n",
     "    # Iterate over similar users and gather recommendations\n",
     "    for neighbor_id in neighbors:\n",
@@ -1661,7 +1661,7 @@
     "        recs_to_add = article_interactions.loc[items_float].sort_values(ascending=False).index.tolist()\n",
     "          \n",
     "        # Add new recommendations to the set\n",
-    "        recs_set.update(recs_to_add)\n",
+    "        recs_set.extend(recs_to_add)\n",
     "\n",
     "        # Stop when we have enough recommendations\n",
     "        if len(recs_set) >= m:\n",
@@ -1936,10 +1936,10 @@
      "output_type": "stream",
      "text": [
       "The top 10 recommendations for user 20 are the following article ids:\n",
-      "[1024.0, 1409.0, 1410.0, 1411.0, 1152.0, 1157.0, 1154.0, 1153.0, 1160.0, 1162.0]\n",
+      "[1330.0, 1427.0, 1364.0, 1170.0, 1162.0, 1304.0, 1351.0, 1160.0, 1354.0, 1368.0]\n",
       "\n",
       "The top 10 recommendations for user 20 are the following article names:\n",
-      "['using deep learning to reconstruct high-resolution audio', 'uci: red wine quality', 'uci: sms spam collection', 'uci: white wine quality', 'airbnb data for analytics: venice reviews', 'airbnb data for analytics: washington d.c. listings', 'airbnb data for analytics: vienna listings', 'airbnb data for analytics: vienna calendar', 'analyze accident reports on amazon emr spark', 'analyze energy consumption in buildings']\n"
+      "['insights from new york car accident reports', 'use xgboost, scikit-learn & ibm watson machine learning apis', 'predicting churn with the spss random tree algorithm', 'apache spark lab, part 1: basic concepts', 'analyze energy consumption in buildings', 'gosales transactions for logistic regression model', 'model bike sharing data with spss', 'analyze accident reports on amazon emr spark', 'movie recommender system with spark machine learning', 'putting a human face on machine learning']\n"
      ]
     }
    ],
@@ -1962,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1974,7 @@
        "Name: 3931, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1997,7 +1997,7 @@
        "Name: 240, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2008,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -2070,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -2122,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -2164,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -2190,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -2202,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -2429,7 +2429,7 @@
        "[5 rows x 714 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2448,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -2482,7 +2482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -2540,7 +2540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -2587,7 +2587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2606,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2623,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2640,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2657,7 +2657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -2699,7 +2699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -2717,7 +2717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2736,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2795,7 +2795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2837,7 +2837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2866,7 +2866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2918,7 +2918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -2928,7 +2928,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook ../src/Recommendations_with_IBM.ipynb to html\n",
-      "[NbConvertApp] Writing 420688 bytes to ../src/Recommendations_with_IBM.html\n"
+      "[NbConvertApp] Writing 417954 bytes to ../src/Recommendations_with_IBM.html\n"
      ]
     },
     {
@@ -2937,7 +2937,7 @@
        "0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
